# discovery-service

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  compile_flags.txt  config.h.in  configure.ac
src/: Application.cpp  CMakeLists.txt  CinnamonDiscovery.cpp  CinnamonWebService.cpp  Credentials.cpp  DateTime.cpp  Dir.cpp  Exception.cpp  FeedLoader.cpp  FeedReader.cpp  File.cpp  HttpRequest.cpp  HttpResponse.cpp  Image.cpp  Location.cpp  Logger.cpp  SqlBinding.cpp  SqlDatabase.cpp  SqlDriver.cpp  SqlField.cpp  SqlQuery.cpp  SqlRecord.cpp  SqlResult.cpp  Sqlite3Driver.cpp  String.cpp  Thread.cpp  Timer.cpp  UnixSocket.cpp  Url.cpp  User.cpp  UserSettings.cpp  Variant.cpp  WeatherConfiguration.cpp  WeatherLoader.cpp  WeatherProvider.cpp  Xdg.cpp  main.cpp
src/include/: Application.h  ByteArray.h  CharBuffer.h  CinnamonDiscovery.h  CinnamonWebService.h  Credentials.h  DateTime.h  Dir.h  Exception.h  FeedLoader.h  FeedReader.h  File.h  Global.h  HttpHeader.h  HttpRequest.h  HttpResponse.h  Image.h  Location.h  Logger.h  SqlBinding.h  SqlDatabase.h  SqlDriver.h  SqlField.h  SqlQuery.h  SqlRecord.h  SqlResult.h  Sqlite3Driver.h  String.h  StringList.h  StringMap.h  Thread.h  Timer.h  UnixSocket.h  Url.h  User.h  UserSettings.h  Variant.h  WeatherConfiguration.h  WeatherLoader.h  WeatherProvider.h  (+1 more)
src/include/weather/: OpenWeatherMapProvider.h  WorldWeatherOnline.h  WorldWeatherOnlineProvider.h
src/weather/: OpenWeatherMapProvider.cpp  WorldWeatherOnline.cpp  WorldWeatherOnlineProvider.cpp
